# chasecrit

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
configs/: base.toml  soc_mvp.toml  soc_mvp_soft.toml  walign_share_noise0.toml  walign_share_noise0_intercept.toml
configs/predictive_dependency_scan_20260207/: p0_nearest_share_noise0.toml  p1_full_share_noise0.toml  p1_gain05_share_noise0.toml  p1_tmax2_share_noise0.toml
configs/soc_scan_20260207/: soc_th024_cp010_rx000.toml  soc_th024_cp010_rx003.toml  soc_th024_cp022_rx000.toml  soc_th024_cp022_rx003.toml  soc_th030_cp010_rx000.toml  soc_th030_cp010_rx003.toml  soc_th030_cp022_rx000.toml  (+9 more)
doc/: 1-s2.0-S0378437125007290-main.txt  SOC-v2方案-基于预测熵波动的自组织临界控制.md  bench_20260206_numba_speed.json  bench_20260206_numba_speed_v2.json  临界态追逃研究建议.md  临界性指标扩展-预测熵方差与任务适配.md  实验结果-E09-chi波动与样本量分析.md  实验结果-SOCv3大规模扫描补充-20260207.md  实验结果-SOCv3论文思路对齐尝试-20260207.md  实验结果-SOC算法接入与初步冒烟实验-20260207.md  实验结果-SOC进一步研究与机制判据-20260207.md  实验结果-临界性验证-噪声控制参.md  实验结果-固定追捕者数量扫描.md  实验结果-对齐比例-预测追捕复现实验-20260207.md  实验结果-对齐比例扩展实验与策略对照图-20260207.md  实验结果-追捕策略改变后临界态与逃跑收益-20260207.md  实验结果-追捕策略预测依赖与近临界收益判定-20260207.md  实验结果总览-指标含义与关系解释.md  实验设计-容量限制缓慢移动多安全区.md  实验路线梳理与下一步协议.md  工程性能-加速与一致性验证.md  算法细节-SOC-v4-VarH与前瞻追捕.md  论文准备-结果索引与复现清单.md  项目目的.md
memory/: 2026-02-05.md  2026-02-06.md  2026-02-07.md  2026-02-08.md  MEMORY.md
paper/: main.tex
tests/: test_align_share_mode.py  test_benchmark_smoke.py  test_evader_step_equivalence.py  test_numba_parity.py  test_pursuer_policies.py  test_sim_regression.py  test_soc_mode.py
(+199 files in other folders)
